--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "mcp-kinetica"
 version = "0.1.0"
-description = "Add your description here"
+description = "MCP Server for Kinetica Database"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
