--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,11 @@ mcp-kinetica = { workspace = true }
 dev = [
     "mcp-kinetica",
 ]
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+log_cli = true
+log_cli_level = "INFO"
+log_cli_format = "%(levelname)s [%(name)s] %(message)s"
+addopts = "-s"
+testpaths = [ "tests" ]
