--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ name = "mcp-kinetica"
 version = "7.2.3.0"
 requires-python = ">=3.10"
 dependencies = [
-    "fastmcp>=2.7.1",   # requires Python3.10
-    "gpudb>=7.2.2.9",   # requires Python3.8
+    "fastmcp>=2.7.1", # requires Python3.10
+    "gpudb>=7.2.2.9", # requires Python3.8
 ]
 
 description = "MCP Server for Kinetica Database"
@@ -38,7 +38,13 @@ mcp-kinetica = { workspace = true }
 
 [dependency-groups]
 dev = [
+    "mcp-kinetica"
+]
+test = [
+    "gpudb[dataframe]>=7.2.2.11",
     "mcp-kinetica",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
 ]
 
 [tool.pytest.ini_options]
