update project for features package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,15 @@ Homepage = "https://github.com/kineticadb/mcp-kinetica/"
 requires = ["setuptools>=77"] # minimum version of setuptools for toml support
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools.packages.find]
-include = ["mcp_kinetica", "tests"]
-namespaces = true
+# [tool.setuptools.packages.find]
+# include = ["mcp_kinetica", "tests"]
+# namespaces = true
+
+[tool.setuptools]
+packages = ["mcp_kinetica", "mcp_kinetica.features"]
 
 [tool.setuptools.package-data]
-mcp_kinetica = ["kinetica_sql_system_prompt.md"]
+"mcp_kinetica.features" = ["*.md"]
 
 [tool.uv.sources]
 mcp-kinetica = { workspace = true }
